tests/NormalTests/paczka1/small_fuzzy/96421679.err
Error in line 2: KCPynOJtb19 A265 22,6
Error in line 11: aBOt A697 -1,1
Error in line 10: R9HUiIWfsN A697 18,8
